# hashstream

./: CMakeLists.txt  LICENSE  README.md
docs/: CMakeLists.txt  doxy.config.in  mainpage.doxygen
hashstream/: CMakeLists.txt  hashstream.cpp  hashstream.hpp  sha1.c  standard.cpp
test/: CMakeLists.txt  test_hashstream.cpp
